--- a/m1/w1/d2/index.html
+++ b/m1/w1/d2/index.html
@@ -18,10 +18,12 @@
 
     <table>
 
-        <tr>
-            <th>Nome</th>
-            <th>Cognome</th>
-        </tr>
+         <thead>
+                 <tr>
+                      <th>Nome</th>
+                     <th>Cognome</th>
+                 </tr>
+        </thead>
         <tr>
             <td>Mario</td>
             <td>Rossi</td>
