--- a/m1/w1/d2/FORM.HTML
+++ b/m1/w1/d2/FORM.HTML
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
-    <form action="">
-        <input name="NOME" type="text" placeholder="Nome">
-        <input name="num" type="number"placeholder="Numero">
-        <input name="email" type="email"placeholder="La tua email">
-        <input name="psw" type="password"placeholder="inserisci la tua password">
+    <!--
+
+        action=> definisce dove inviare i dati, inoltre sposta l'utente
+        method=> indica la motalida di invio di dati
+        method: post=> non sporco l indirizzo posso inviare grandi quantità dui dati
+        method: get=> sporca l'indirizzo aggiungendo una seriew di query params(chiavi-valore)
+        
+    -->
+
+    <form action="" method="post">
+
+        <label for="nome">Nome</label>
+        <input id="nome" name="NOME" type="text" placeholder="Nome">
+        <input name="num" type="number" placeholder="Numero">
+        <input name="email" type="email" placeholder="La tua email">
+        <input name="psw" type="password" placeholder="inserisci la tua password">
+
+        <br>
+
+        <label for="consenso">Accetto la privacy policy</label>
+        <input id="consenso" type="checkbox">
+
+        <br>
 
         <select name="city">
             <option value="">--seleziona--</option>
@@ -28,6 +48,7 @@
             utilizzo value per cambiare l'etichetta del tasto submit
         -->
     </form>
-    
+
 </body>
+
 </html>
