--- a/m1/w1/d3/selettori/index.html
+++ b/m1/w1/d3/selettori/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css1/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -35,25 +35,23 @@
 
     <!-- raggruppamento di più tag <div>-->
 
-    <div>ciao</div>
-    <div id="div-blue">ciao</div>
-    <div class="testo-verde">ciao</div>
-    <div>ciao</div>
-    <div class="testo-verde">ciao</div>
-    <div>ciao</div>
+        <div>ciao</div>
+        <div id="div-blue">ciao</div>
+        <div class="testo-verde">ciao</div>
+        <div>ciao</div>
+        <div class="testo-verde">ciao</div>
+        <div>ciao</div>
+        <div>ciao</div>
     <hr>
-
-    <span>
-        testo corsivo
-    </span>
-
-    <div id="area-grassetto">
-        <span>testo grassetto</span>
-        <span>testo grassetto</span>
-        <div>
-            <span>sfondo blu</span>
+    
+        <span>testo corsivo</span>
+        <div id="area-grassetto">
+            <span>testo grassetto</span>
+            <span>testo grassetto</span>
+            <div>
+                <span>sfondo blu</span>
+            </div>
         </div>
-    </div>
 
 </body>
 
