--- a/m1/w1/d4/start/articolo.html
+++ b/m1/w1/d4/start/articolo.html
@@ -9,39 +9,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
+<link rel="icon" href="assets/img/logo.svg">
+<meta name="description"
+        content="Il blog dei developers - tutorial template post">
+
+
+        
+
+        <link rel="stylesheet" href="./assets/css/reset.css">
+        <link rel="stylesheet" href="./assets/css/all.css">
+        <link rel="stylesheet" href="./assets/css/stile.css">
 </head>
 
 <body>
     <header>
         <div>
-            <img src="assets/img/logo.svg" alt="logo del blog" width="250" height="60">
-            <p>Epicode - Il blog dei developers</p>
+        <div class="logo">
+            <img src="assets/img/logo.svg" alt="logo del blog" width="250" >
+            <p class="content">Epicode - Il blog dei developers</p>
         </div>
         <nav>
-            <ul>
-                <li><a href="index.html" title="Home Page">Home</a></li>
-                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
-                <li><a href="contatti.html" title="Candidati inviando un tuo cv">Lavora con noi</a></li>
+            <ul class="lista">
+                <li><a href="index.html" title="Home Page">❯ Home ❮</a></li>
+                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">❯ Articoli ❮</a></li>
+                <li><a href="contatti.html" title="Candidati inviando un tuo cv">❯ Lavora con noi ❮</a></li>
             </ul>
         </nav>
+        </div>
 
     </header>
 
     <hr>
 
+
+    <div class="questione">
+
     <main>
         <article>
-            <h1>Come creare un template per i post</h1>
-            <p>di Mario Rossi - <span> pubblicato il 25-10-2020</span></p>
+            <h1> Come creare un template per i post</h1>
+            <p class="opacity">📝 di Mario Rossi - <span>🕑 pubblicato il 25-10-2020</span></p>
 
+            <div class="small-body">
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti
                     comuni</strong> da applicare a tutte le pagine</p>
 
-            <p>Le varie aree saranno quindi suddivise in:</p>
-            <ul>
+            <p class="intestazione-lista">Le varie aree saranno quindi suddivise in:</p>
+            <ul class="liste">
                 <li>Contenuti di intestazione del tag <code>&lt;header&gt;</code></li>
                 <li>Contenuti centrali variabili del tag <code>&lt;main&gt;</code> (corpo principale)</li>
                 <li>Contenuti di fine pagina comuni, da inserire nel tag <code>&lt;footer&gt;</code></li>
@@ -50,7 +67,7 @@
             <h2>Formattazione del codice</h2>
             <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare con
                     i CSS</strong>. Perciò i passi saranno:</p>
-            <ol>
+            <ol class="liste">
                 <li>Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
                 <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
                 <li>Applicare gli stili CSS</li>
@@ -96,19 +113,19 @@
                 </tbody>
             </table>
 
-            <p>Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/"
-                    target="blank" title="Validatore CSS online del W3C">tool online</a> dedicato allo scopo. Una volta
+            <p >Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/"
+                    target="blank" title="Validatore CSS online del W3C" class="foot">tool online</a> dedicato allo scopo. Una volta
                 ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come
                 loro:</p>
 
-            <iframe width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM"
+            <iframe id="yt" width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
             <section>
                 <h2>Novità</h2>
-                <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
+                <p class="padding">Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
 
                 <form method="POST" action="elabora_form.php">
                     <fieldset>
@@ -118,6 +135,7 @@
                 </form>
             </section>
 
+        </div>
         </article>
 
         <aside>
@@ -148,12 +166,14 @@
     </main>
 
     <hr>
-
+</div>
     <footer>
+        <div class="aint">>
         <p>Blog Epicode &copy;2021</p>
         <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA
-            00112233. <a href="mailto:info@epicode.school"
+            00112233. <a class="mail" href="mailto:info@epicode.school"
                 title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
+        </div>
     </footer>
 
 </body>
