--- a/m1/w1/d4/start/articolo.html
+++ b/m1/w1/d4/start/articolo.html
@@ -140,27 +140,27 @@
 
         <aside>
             <h2>Articoli correlati</h2>
-            <div>
+            <div class="correlati">
                 <a href="post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
                     HTML</a>
                 <p>Categoria: develop</p>
-                <p>Data: 18-9-2020</p>
+                <p class="data">Data: 18-9-2020</p>
             </div>
 
-            <div>
+            <div class="correlati">
                 <a href="post3.html"
                     title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
                     sintassi</a>
                 <p>Categoria: develop</p>
-                <p>Data: 16-9-2020</p>
+                <p class="data" >Data: 16-9-2020</p>
             </div>
 
-            <div>
+            <div class="correlati">
                 <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
                     pagina</a>
                 <p>Categoria: ottimizzazione</p>
-                <p>Data: 30-9-2020</p>
+                <p class="data">Data: 30-9-2020</p>
             </div>
         </aside>
     </main>
@@ -168,8 +168,8 @@
     <hr>
 </div>
     <footer>
-        <div class="aint">>
-        <p>Blog Epicode &copy;2021</p>
+        <div class="aint">
+        <p class="line">Blog Epicode &copy;2021</p>
         <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA
             00112233. <a class="mail" href="mailto:info@epicode.school"
                 title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
