ultima patch lo giuro

--- a/m1/w1/d4/start/articolo.html
+++ b/m1/w1/d4/start/articolo.html
@@ -144,7 +144,7 @@
                 <a href="post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
                     HTML</a>
-                <p>Categoria: develop</p>
+                <p>🏷 Categoria: develop</p>
                 <p class="data">Data: 18-9-2020</p>
             </div>
 
@@ -152,14 +152,14 @@
                 <a href="post3.html"
                     title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
                     sintassi</a>
-                <p>Categoria: develop</p>
+                <p>🏷 Categoria: develop</p>
                 <p class="data" >Data: 16-9-2020</p>
             </div>
 
             <div class="correlati">
                 <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
                     pagina</a>
-                <p>Categoria: ottimizzazione</p>
+                <p>🏷 Categoria: ottimizzazione</p>
                 <p class="data">Data: 30-9-2020</p>
             </div>
         </aside>
