HOMEWORK SETTIMANALE FIRST PUSH

--- a/m1/w1/d4/start/articolo.html
+++ b/m1/w1/d4/start/articolo.html
@@ -17,8 +17,7 @@
 <meta name="description"
         content="Il blog dei developers - tutorial template post">
 
-
-        
+        <script src="https://kit.fontawesome.com/ca90b3e3f2.js" crossorigin="anonymous"></script>        
 
         <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/all.css">
@@ -51,7 +50,7 @@
     <main>
         <article>
             <h1> Come creare un template per i post</h1>
-            <p class="opacity">📝 di Mario Rossi - <span>🕑 pubblicato il 25-10-2020</span></p>
+            <p class="opacity"><i class="fa-solid fa-square-pen"></i> di Mario Rossi - <span><i class="fa-solid fa-clock"></i> pubblicato il 25-10-2020</span></p>
 
             <div class="small-body">
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti
@@ -144,7 +143,7 @@
                 <a href="post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
                     HTML</a>
-                <p>🏷 Categoria: develop</p>
+                <p><i class="fa-solid fa-tag"></i></fa-solid> Categoria: develop</p>
                 <p class="data">Data: 18-9-2020</p>
             </div>
 
@@ -152,14 +151,14 @@
                 <a href="post3.html"
                     title="Passaggi guidati per controllare e correggere tutto il codice sviluppato">Correggere la
                     sintassi</a>
-                <p>🏷 Categoria: develop</p>
+                <p><i class="fa-solid fa-tag"></i></fa-solid> Categoria: develop</p>
                 <p class="data" >Data: 16-9-2020</p>
             </div>
 
             <div class="correlati">
                 <a href="post4.html" title="Consigli ed approcci per ridurre il peso della pagina">Meno Kb nella
                     pagina</a>
-                <p>🏷 Categoria: ottimizzazione</p>
+                <p><i class="fa-solid fa-tag"></i></fa-solid> Categoria: ottimizzazione</p>
                 <p class="data">Data: 30-9-2020</p>
             </div>
         </aside>
