--- a/m1/w1/d5/start/workweek1.html
+++ b/m1/w1/d5/start/workweek1.html
@@ -134,13 +134,16 @@
 
 
             <a id="wa" alt="telefono" target="_blank"
-                href="https://wa.me/+3911223456?text=Salve%20vi%20contatto%20per%20una%20consulenza"><i class="fa-solid fa-square-phone"></i>(+39)
+                href="https://wa.me/+3911223456?text=Salve%20vi%20contatto%20per%20una%20consulenza"><i
+                    class="fa-solid fa-square-phone"></i>(+39)
                 11223456</a>
 
-            <a id="mail" target="_blank" alt="email" href="mailto:info@epicode.school"><i class="fa-solid fa-envelope"></i>info&copy;epicode.school</a>
+            <a id="mail" target="_blank" alt="email" href="mailto:info@epicode.school"><i
+                    class="fa-solid fa-envelope"></i>info&copy;epicode.school</a>
 
 
-            <a id="indirizzo" target="_blank" alt="indirizzo" href="https://goo.gl/maps/seCLyyEWet12m62J8"><i class="fa-solid fa-square-arrow-up-right"></i>Via Appia 1 - 00100 Roma (RO)</a>
+            <a id="indirizzo" target="_blank" alt="indirizzo" href="https://goo.gl/maps/seCLyyEWet12m62J8"><i
+                    class="fa-solid fa-square-arrow-up-right"></i>Via Appia 1 - 00100 Roma (RO)</a>
 
         </address>
 
@@ -154,5 +157,3 @@
 </body>
 
 </html>
-
-
