Aggiunta di commenti per maggiore comprensibilità

--- a/m1/w1/d5/start/workweek1.html
+++ b/m1/w1/d5/start/workweek1.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <!--====================HEADER==================-->
+    <!--==================================/HEAD\====================================-->
 
     <header>
 
@@ -50,9 +50,14 @@
 
     </header>
 
+    <!--==================================/MAIN\====================================-->
+
+
     <main>
 
         <section id="seconda-sezione">
+
+            <!--==================================/PARAGRAFO 1\====================================-->
 
             <h2 class="subtitle">Tutti ti cercheranno</h2>
             <p class="paragraph">Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola
@@ -69,7 +74,7 @@
                 </figure>
             </div>
 
-
+            <!--==================================/PARAGRAFO 2\====================================-->
 
             <h2 class="subtitle">Scegli il tuo ruolo</h2>
             <p class="paragraph">Potrai scegliere se essere Azienda, Freelance o Startup</p>
@@ -79,6 +84,8 @@
             <p class="paragraph">Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
 
         </section>
+
+        <!--==================================/INTERMEZZO\====================================-->
 
         <article id="intermezzo" class="paragraph">
 
@@ -94,6 +101,8 @@
 
         <section id="terza-sezione">
 
+            <!--==================================/ARTICOLO 1\====================================-->
+
             <article>
 
                 <img src="./assets/images/foto1.jpg" alt="computer su scrivania">
@@ -103,6 +112,8 @@
 
             </article>
 
+            <!--==================================/ARTICOLO 2\====================================-->
+
             <article>
 
                 <img src="./assets/images/foto2.jpg" alt="">
@@ -111,6 +122,8 @@
                 <p class="paragraph">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
 
             </article>
+
+            <!--==================================/ARTICOLO 3\====================================-->
 
             <article>
 
@@ -125,6 +138,8 @@
 
     </main>
 
+    <!--==================================/FOOTER\====================================-->
+
     <footer>
 
         <p>
@@ -132,6 +147,7 @@
 
         <address>
 
+            <!--==================================/REFERENZE\====================================-->
 
             <a id="wa" alt="telefono" target="_blank"
                 href="https://wa.me/+3911223456?text=Salve%20vi%20contatto%20per%20una%20consulenza"><i
@@ -146,6 +162,8 @@
                     class="fa-solid fa-square-arrow-up-right"></i>Via Appia 1 - 00100 Roma (RO)</a>
 
         </address>
+
+        <!--==================================/PIE' DI PAGINA\====================================-->
 
         <div>
             &copy; 2021 Immagini di <span>Pixaby</span>
