--- a/m1/w1/d5/start/index.html
+++ b/m1/w1/d5/start/index.html
@@ -41,7 +41,7 @@
 
                 <button>
                     <span id="butt">
-                        <a class="subtitle" href="">Partiamo!</a>
+                        <a class="subtitle" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">Partiamo!</a>
                     </span>
                 </button>
             </section>
