--- a/m1/w2/d2/absolute/esercizio2.html
+++ b/m1/w2/d2/absolute/esercizio2.html
@@ -15,6 +15,7 @@
         <div class="blocco">2</div>
         <div class="blocco">3</div>
         <div class="blocco">4</div>
+        <div>ieikefdugjon9ehrpiopkgoi</div>
    </section>
 
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum inventore at numquam quidem perferendis quasi accusantium voluptatem voluptatibus a corporis laboriosam ipsam cumque ea enim ab recusandae sapiente, ex libero!
