--- a/m1/w2/d2/start/articolo.html
+++ b/m1/w2/d2/start/articolo.html
@@ -100,7 +100,7 @@
 
                 <iframe width="300" height="300" src="https://www.youtube.com/embed/dvOvHXruEDM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-                <section>
+                <section class="news">
                     <h2>Novità</h2>
                     <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
                     
