--- a/m1/w2/d3/start/articolo.html
+++ b/m1/w2/d3/start/articolo.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" title="Home Page">Home</a></li>
-                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
+                <li><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" title="Elenco degli articoli tecnici pubblicati">Articoli Fantastici</a></li>
                 <li><a href="contatti.html" title="Candidati inviando un tuo cv">Job</a></li>
             </ul>
         </nav>
@@ -61,7 +61,7 @@
                 <p class="quary-otto">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.
                 </p>
 
-                <table>
+                <table class="quary-otto">
                     <caption>Diffusione dei CSS</caption>
                     <thead>
                         <tr>
