--- a/m1/w2/d3/start-grid/articolo.html
+++ b/m1/w2/d3/start-grid/articolo.html
@@ -23,7 +23,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" title="Home Page">Home</a></li>
-                <li><a href="articoli.html" title="Elenco degli articoli tecnici pubblicati">Articoli</a></li>
+                <li><a href="https://youtu.be/dQw4w9WgXcQ" title="Elenco degli articoli tecnici pubblicati">Articoli Bellissimi</a></li>
                 <li><a href="contatti.html" title="Candidati inviando un tuo cv">Lavora con noi</a></li>
             </ul>
         </nav>
@@ -155,6 +155,12 @@
         <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA
             00112233. <a href="mailto:info@epicode.school"
                 title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
+
+
+                <div class="social"><a href="https://www.facebook.com" target="_blank"><i class="far fa-plus-square"></i></a> <a
+                    href="https://calendar.google.com"><i class="far fa-calendar-alt"></i></a></div>
+            <div class="toTop"><a href="#top"><i class="far fa-caret-square-up"></i></a></div>
+        
     </footer>
 
 </body>
