patch column reverse

--- a/m1/w2/d3/start-flexbox/articolo.html
+++ b/m1/w2/d3/start-flexbox/articolo.html
@@ -125,13 +125,14 @@
 
         </article>
 
-        <h2 class="aside-title-query">Articoli correlati</h2>
+        <!--  <h2 class="aside-title-query">Articoli correlati</h2>
+        -->
 
         <aside class="box-aside">
 
             <h2 class="aside-title">Articoli correlati</h2>
 
-
+            <div id="asidecont">
             <div>
                 <a href="post2.html"
                     title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice
@@ -154,6 +155,7 @@
                 <p><i class="fas fa-tag"></i> Categoria: ottimizzazione</p>
                 <p><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
             </div>
+        </div>
         </aside>
     </main>
 
