--- a/m1/w2/d2/menu/index.html
+++ b/m1/w2/d2/menu/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
+    
     <header id="main-header">
         <nav>
+            <label for="toggle">Menu</label>
+            <input id="toggle" type="checkbox">
             <ul id="menu">
                 <li><a href="#">Home</a></li>
                 <li>
-                    <a href="#">Chi siamo</a>
+                    <a href="#">Chi Siamo</a>
                     <ul>
                         <li><a href="">pagina</a></li>
                         <li><a href="">pagina</a></li>
@@ -31,5 +30,4 @@
     </header>
 
 </body>
-
 </html>
