patch finale homework

--- a/m1/w2/d4/start1/postit.html
+++ b/m1/w2/d4/start1/postit.html
@@ -21,58 +21,58 @@
         <div class="task">
             <div class="post-it gialli" id="p1">
                 <span>Task #1</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it verdi" id="p2">
                 <span>Task #2</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it blu" id="p3">
                 <span>Task #3</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it verdi" id="p4">
                 <span>Task #4</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it gialli" id="p5">
                 <span>Task #5</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it blu" id="p6">
                 <span>Task #6</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it gialli" id="p7">
                 <span>Task #7</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
             <div class="post-it verdi" id="p8">
                 <span>Task #8</span>Realizziamo con cura, passione, attenzione,meticolosità, precisione ed un pizzico di
-                originalità <div id="single" class="scomparelle">single</div>
-                <div id="pagee" class="scomparelle">page</div>
-                <div id="app" class="scomparelle">app</div>
+                originalità <div id="single" class="scomparelle">Single page app</div>
+                <div id="interfacce" class="scomparelle">Interfacce web</div>
+                <div id="app" class="scomparelle">App native</div>
             </div>
 
         </div>
