--- a/m1/w2/d5/start/chi-siamo.html
+++ b/m1/w2/d5/start/chi-siamo.html
@@ -15,7 +15,7 @@
 <script src="https://kit.fontawesome.com/ca90b3e3f2.js" crossorigin="anonymous"></script> 
 </head>
 
-<body>
+<body id="bodychisiamo">
 
   
   <article class="articoli">
@@ -96,7 +96,7 @@
 </table>
 
 <table id="table-tabdsk">
-  <caption>Prezzi dei corsi</caption>
+  <caption><h3>Prezzi dei corsi</h3></caption>
 
   <thead> <!--cambiare colore th-->
     <tr>
@@ -108,6 +108,7 @@
 
   <tbody>
     <tr class="table-blue-bg">
+      
       
       <td>30 ore di formazione</td>
       <td>Tutte le caratteristiche del corso base</td>
