--- a/m1/w2/d5/start/contatti.html
+++ b/m1/w2/d5/start/contatti.html
@@ -16,50 +16,50 @@
 </head>
 
 <body>
+  <h1 id="titolo-contattimb">Contatti</h1>
+  <div id="container-contatti">
+    <form class="form-contatti" action="">
 
+      <h1 id="titolo-contatti">Contatti</h1>
 
-  <form class="form-contatti" action="">
+      <input type="name" id="nome" name="Nome e Cognome" placeholder="Nome e Cognome..">
 
-    <h id="titolo-contatti">Contatti</h>
+      <input type="email" id="email" name="email" placeholder="indirizzo valido nome@casella.com..">
 
-    <input type="name" id="nome" name="Nome e Cognome" placeholder="Nome e Cognome..">
+      <input type="text" id="messaggio" name="lastname" placeholder="Scrivi in breve il tuo messaggio">
 
-    <input type="email" id="email" name="email" placeholder="indirizzo valido nome@casella.com..">
-
-    <input type="text" id="messaggio" name="lastname" placeholder="Scrivi in breve il tuo messaggio">
-
-    <div class="bottone"><a href="./contatti.html">Invia il messaggio</a></div>
-  </div>
+      <div class="bottone"><a href="./contatti.html">Invia il messaggio</a></div>
+  
 
   </form>
 
+  <div id="sottoconteiner">
+    <article class="articoli articoli-contatti">
+      <div>
+        <h3>Sede formativa</h3>
+        <p>
 
-  <article class="articoli articoli-contatti">
-    <div>
-      <h3>Sede formativa</h3>
-      <p>
-      <address>
-        Via Appia 1 <span>
-          001000 Roma (RM)</span>
-      </address>
-      </p>
-      <p>
-      <address>
-        info@epicode.school<span>
-          +39 0612345956</span>
-      </address>
-      </p>
+          Via Appia 1 <span>
+            001000 Roma (RM)</span>
 
-    </div>
-  </article>
+        </p>
+        <p>
+          info@epicode.school<span>
+            +39 0612345956</span>
+        </p>
 
-  <article class="articoli articoli-contatti">
-    <div>
-      <h3>Lavora con noi</h3>
-      <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a <a
-          href="mailto:job@ebicode.school">job@ebicode.school</a></p>
-    </div>
-  </article>
+      </div>
+    </article>
+
+    <article class="articoli articoli-contatti">
+      <div>
+        <h3>Lavora con noi</h3>
+        <p>Per poterti candidare ad un ruolo da docente invia il tuo cv a <a
+            href="mailto:job@ebicode.school">job@ebicode.school</a></p>
+      </div>
+    </article>
+  </div>
+</div>
 
 </body>
 
