patch finale hw

--- a/m1/w2/d5/start/chi-siamo.html
+++ b/m1/w2/d5/start/chi-siamo.html
@@ -15,15 +15,33 @@
 <script src="https://kit.fontawesome.com/ca90b3e3f2.js" crossorigin="anonymous"></script> 
 </head>
 
-<body id="bodychisiamo">
+<body>
+  <header>
 
+    <section class="top-nav">
+      <div>
+        <img src="./assets/images/logo.png" alt="">
+      </div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+      <ul class="menu">
+        <li><a href="./index.html" target="_blank" class="menuref">Home</a></li>
+        <li><a href="./contatti.html" target="_blank" class="menuref">Contatti</a></li>
+        <li><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" class="menuref">Free candy!</a></li>
+      </ul>
+    </section>
+
+  </header>
+<div id="bodychisiamo">
   
   <article class="articoli">
     <h1 id="titolo-chisiamo">We are coder</h1>
     <p>Epicode School nasce con l’obiettivo di rivoluzionare la formazione in ambito tech. Vogliamo essere il movimento dei creatori digitali che il mercato richiede: formiamo, forniamo e aggiorniamo specialisti con la missione di trasformare le aziende dall’interno e offrire ai giovani sicure prospettive di carriera. Siamo a Roma ma arriviamo in tutta Italia, per creare la community che rivoluzionerà il mondo del lavoro.
     </p>
     </article>
-<section>
+<section class="sezione-chisiamo">
 
   <article class="articoli chisiamo">
   <div>
@@ -42,6 +60,7 @@
 </figure>
   </div>
 </article>
+</section>
 
 <table class="table-mobile">
   <caption><h3>Prezzi dei corsi</h3></caption>
@@ -132,10 +151,10 @@
   </tbody>
 </table>
 
-</section>
+
     
 
-
+</div>
 </body>
 
 </html>
