--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -31,7 +31,7 @@
       <ul class="menu">
         <li><a href="./chi-siamo.html" target="_blank" class="menuref">Chi siamo</a></li>
         <li><a href="./contatti.html" target="_blank" class="menuref">Contatti</a></li>
-        <li><a href="" target="_blank" class="menuref">Free candy!</a></li>
+        <li><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" class="menuref">Free candy!</a></li>
       </ul>
     </section>
 
