--- a/m1/w2/d5/start/chi-siamo.html
+++ b/m1/w2/d5/start/chi-siamo.html
@@ -20,7 +20,7 @@
 
     <section class="top-nav">
       <div>
-        <img src="./assets/images/logo.png" alt="">
+        <img src="./assets/images/logo.png" alt="logo Epicode">
       </div>
       <input id="menu-toggle" type="checkbox" />
       <label class='menu-button-container' for="menu-toggle">
