--- a/m1/w2/d5/start/index.html
+++ b/m1/w2/d5/start/index.html
@@ -22,7 +22,7 @@
 
     <section class="top-nav">
       <div>
-        <img src="./assets/images/logo.png" alt="">
+        <img id="epicode" src="./assets/images/logo.png" alt="logo Epicode">
       </div>
       <input id="menu-toggle" type="checkbox" />
       <label class='menu-button-container' for="menu-toggle">
