--- a/m1/w3/d2/js/index.html
+++ b/m1/w3/d2/js/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stile.css">
 </head>
 <body>
 
+
+    <div>
+    <input type="text" id="pezziPizza" placeholder="quanti pezzi di pizza mangiate per cena?">
+    <input type="text" id="persone" placeholder="quante persone siete a cena?" >
+    <button onclick="pezziTotali()">Quanti ne ordino?</button>
+    </div>
+    <p id="result"></p>
+
     <script src="./script.js"></script>
+
     
 </body>
 </html>
