--- a/m1/w3/d1/calcolatrice/index.html
+++ b/m1/w3/d1/calcolatrice/index.html
@@ -5,6 +5,9 @@
     <title>My Calculator</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arima&family=Fira+Sans:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
@@ -12,17 +15,17 @@
             <div id="display"></div>
             <div class="buttons">
                 <div class="button">C</div>
-                <div class="button">/</div>
-                <div class="button">*</div>
+                <div class="button op">/</div>
+                <div class="button op">*</div>
                 <div class="button">&larr;</div>
                 <div class="button">7</div>
                 <div class="button">8</div>
                 <div class="button">9</div>
-                <div class="button">-</div>
+                <div class="button op">-</div>
                 <div class="button">4</div>
                 <div class="button">5</div>
                 <div class="button">6</div>
-                <div class="button">+</div>
+                <div class="button op">+</div>
                 <div class="button">1</div>
                 <div class="button">2</div>
                 <div class="button">3</div>
