--- a/m1/w3/d5/calcolatrice/index.html
+++ b/m1/w3/d5/calcolatrice/index.html
@@ -1,42 +1,52 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Calculator</title>
-    <link rel="stylesheet" href="./css/reset.css">
+    <title>Calculator</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arima&family=Fira+Sans:wght@100;400&display=swap" rel="stylesheet">
 </head>
-<body>
-    <section>
-        <div class="container">
-            <div id="display"></div>
-            <div class="buttons">
-                <div class="button">C</div>
-                <div class="button op">/</div>
-                <div class="button op">*</div>
-                <div class="button">&larr;</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button op">-</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button op">+</div>
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button">.</div>
-                <div class="button">(</div>
-                <div class="button">0</div>
-                <div class="button">)</div>
-                <div id="equal" class="button">=</div>
-            </div>
+<body >
+
+    <label class="switch" >
+        <input id="make3d" type="checkbox">
+        <span class="slider round"></span>
+      </label>
+      
+
+    <div class="calculator" id="calculator1">
+        <div class="display">
+            <div class="output"></div>
+            <div class="result">0</div>
         </div>
-    </section>
-    <script src="./js/script.js"></script>
+        <div class="input">
+            <button>AC</button>
+            <button>(</button>
+            <button>)</button>
+            <button class="op">+</button>
+
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="op">-</button>
+
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="op">x</button>
+
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="op">/</button>
+
+            <button>DEL</button>
+            <button>0</button>
+            <button>.</button>
+            <button class="op" id="equal">=</button>
+        </div>
+    </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="./js/script.js"></script>
 </html>
