--- a/m1/w3/d5/calcolatrice/index.html
+++ b/m1/w3/d5/calcolatrice/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body >
+    <div class="dmaker">
 
     <label class="switch" >
         <input id="make3d" type="checkbox">
         <span class="slider round"></span>
       </label>
-      
+      <p>Make it 3D</p>
+      </div>
 
     <div class="calculator" id="calculator1">
         <div class="display">
