--- a/m2/w1/d1/if.html
+++ b/m2/w1/d1/if.html
@@ -6,18 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-
+    
     <script>
-        function controllaEta(eta){
-        if(eta<18)
-        return false;
-        document.write('sei maggiorenne')
-    }
 
+        function controllaEta(eta){
+
+            if(eta < 18)
+            return false
+
+            document.write('sei maggiorenne')
+        }
 
         console.log(controllaEta(19))
 
     </script>
-    
 </body>
 </html>
