--- a/m2/w1/d3/lezione/fetch.html
+++ b/m2/w1/d3/lezione/fetch.html
@@ -9,16 +9,16 @@
 <body>
     
 
-
-
-
     <script>
 
+       console.log('1');
 
+        fetch('http://caclassauto.it/test/writeMe.json')
+        .then(res => res.json())
+        .then(data => console.log(data))
 
-
-
+       console.log('2');
+        
     </script>
-
 </body>
 </html>
