--- a/m2/w1/d5/PROGETTO-start/index.html
+++ b/m2/w1/d5/PROGETTO-start/index.html
@@ -30,7 +30,7 @@
     <div id="modal">
         <div class="content">
             <h2>Congratulazioni! Hai risolto il gioco in: </h2>
-            <p><span id="tempoTrascorso"> </span> e <span id="count"></span> </p>
+            <p><span id="tempoTrascorso"> </span><span id="count"></span> </p>
             
             <p><input type="button" class="button" onclick=playAgain() value="Altra partita"></p>
             <div id="containerTable"></div>
