--- a/m2/w2/d3/progetto3/index.html
+++ b/m2/w2/d3/progetto3/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="quadrato-40 bg-info"></div>
+
+    <P class="bg-primary">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo molestias voluptate atque quas ipsa sapiente quibusdam cumque eveniet deleniti tempora repellendus voluptatibus quidem perferendis reiciendis aliquid, suscipit fugit autem. Illum.
+    </P>
+    <P class="bg-warning">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quas quia odit! Repellat quo nesciunt tenetur reiciendis vel itaque at fugiat molestiae eius? Amet quisquam nisi inventore dolorem. Fugit, laborum.
+    </P>
+
+
     <button class="btn btn-primary">bottone bellissimo</button>
     
+    <section class="standard-section"> </section>
+    <section class="standard-section"> </section>
+    <section class="standard-section"> </section>
+    <section class="special-section"> </section>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
