--- a/m2/w2/d2/sass/index.html
+++ b/m2/w2/d2/sass/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <h1>ciao</h1>
     
+    <h1>ciao</h1>
+
 </body>
 </html>
