--- a/m2/w2/d5/progetto/index.html
+++ b/m2/w2/d5/progetto/index.html
@@ -104,29 +104,29 @@
         </div>
     </section>
 
-    <section id="price my-5">
-        <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
-            I NOSTRI ALBERI
-        </p>
-        <div class="row row-cols-1 row-cols-md-3 mb-5 text-center">
-            <div class="col">
-              <div class="card mb-4 rounded-3 shadow-sm border-success">
-                <div class="card-header py-3">
-                  <h4 class="my-0 fw-normal">BAOBAB</h4>
+    <section id="price my-5 container">
+    <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
+        I NOSTRI ALBERI
+    </p>
+            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+                <div class="col-3">
+                  <div class="card mb-4 rounded-3 shadow-sm border-success">
+                    <div class="card-header py-3">
+                      <h4 class="my-0 fw-normal">BAOBAB</h4>
+                    </div>
+                    <div class="card-body" id="baobab">
+                      <h1 class="card-title pricing-card-title"><span class="text-bg-warning px-2 prezzoAlbero rounded-2">$26</span></h1>
+                      <ul class="list-unstyled mt-3 mb-4  text-bg-light rounded-2">
+                        <li>una parte della somma sara devoluta agli abitanti del posto</li>
+                        <li>Avrai aggiornamenti foto e video della pianta</li>
+                        <li>Assistenza</li>
+                        <li>Una penna marchiata <span class="text-bg-success px-1 ">PIANTALA &reg;</span></li>
+                      </ul>
+                      <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
+                    </div>
+                  </div>
                 </div>
-                <div class="card-body" id="baobab">
-                  <h1 class="card-title pricing-card-title"><span class="text-bg-warning px-2 prezzoAlbero rounded-2">$26</span></h1>
-                  <ul class="list-unstyled mt-3 mb-4  text-bg-light rounded-2">
-                    <li>una parte della somma sara devoluta agli abitanti del posto</li>
-                    <li>Avrai aggiornamenti foto e video della pianta</li>
-                    <li>Assistenza</li>
-                    <li>Una penna marchiata <span class="text-bg-success px-1 ">PIANTALA &reg;</span></li>
-                  </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
+            <div class="col-3">
               <div class="card mb-4 rounded-3 shadow-sm border-success">
                 <div class="card-header py-3">
                   <h4 class="my-0 fw-normal">SAUGAGE TREE (KIGELIA AFRICANA)</h4>
@@ -139,11 +139,11 @@
                     <li>Assistenza</li>
                     <li>Decidi dove lo pianti!</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-light">Pianta ora!</button>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3">
               <div class="card mb-4 rounded-3 shadow-sm border-success">
                 <div class="card-header py-3 text-bg-light border-success">
                   <h4 class="my-0 fw-normal">MARULA TREE (SCLEROCARYA BIRREA)</h4>
@@ -156,7 +156,7 @@
                     <li>Assistenza </li>
                     <li>Riceverai un buono sconto del <span class="text-bg-primary px-1" > 20% </span> da regalare a chi vuoi!</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-light">Pianta ora!</button>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
                 </div>
               </div>
             </div>
@@ -222,8 +222,6 @@
         </div>
 
     </section>
-
-
 
     <footer id="contatti">
         <!-- Footer -->
